[package]
name = "privacy_http_sdk"
description = "Privacy HTTP SDK"
homepage = "https://github.com/AI-Robotic-Labs/http-privacy"
documentation = "https://docs.rs/privacy_http_sdk"
license = "MIT"
version = "1.0.0-beta"
edition = "2018"

[dependencies]
reqwest = { version = "0.12.12", features = ["json", "native-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1", features = ["full"] }
cxx = "1.0.136"
openai = "1.0.0-alpha.18"
rig-core = "0.6.0"

[build-dependencies]
cxx-build = "1.0.136"

[lib]
# Make this library compatible with C++
crate-type = ["cdylib"]

[features]
default = []
