[package]
name = "privacy_http_sdk"
description = "Privacy HTTP SDK for Rust"
repository = "https://codeberg.org/Robot_Labs/http-privacy"
documentation = "https://docs.rs/privacy_http_sdk"
license = "MIT"
version = "1.0.7"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.12", features = ["json", "native-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1", features = ["full"] }
cxx = "1.0.170"
openai = "1.0.0-alpha.19"
rig-core = "0.18.0"
gemini_client_rs = "0.6.0"
wasm-bindgen = "0.2.100"
pyo3 = "0.26.0"
deepseek_rs = "0.1.4"
aws-sdk-s3 = "1.79.0"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
js-sys = "0.3"
base64 = "0.22.1"
mcp_rust_schema = "0.1.4"

[build-dependencies]
cxx-build = "1.0.170"

[lib]
name = "privacy_http_sdk"
crate-type = ["cdylib",  "rlib"]

[features]
default = []
