[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "http-privacy-sdk"
version = "1.0.1"
authors = [
  { name = "AI & Robotic Labs" },
]
description = "HTTP privacy SDK for Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }  # Fixed: Use table syntax for license file
dependencies = [
    "Flask==3.1.2",
    "requests==2.32.5",
    "user_agent==0.1.14",
    "openai==2.7.2",
    "google-generativeai==0.8.5",
    "mcp==1.21.0",
    "qwen-agent==0.0.31",
    "llama-cpp-python==0.3.16",
    "boto3==1.40.72",
    "xai-sdk==1.4.0"
]

[project.scripts]
my-app = "app:main"  # If `app.py` has a `main()` function

[project.urls]
Homepage = "https://github.com/AI-Robotic-Labs/http-privacy"
Issues = "https://github.com/AI-Robotic-Labs/http-privacy/issues"
